--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Calculator App"
+      content="Simple Calculator"
+    />
     <title>Calculator</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="imgs/icon.png" type="image/x-icon" />
